# pytest-metaexport

./: .gitignore  README.md  pyproject.toml
pytest_metaexport/: pytest_metaexport.py
